minijinja/tests/snapshots/test_templates__vm@loop_over_non_iterable.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "[{% for item in seq %}{% endfor %}]"
info:
  seq: 42
input_file: minijinja/tests/inputs/loop_over_non_iterable.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "number is not iterable",
    name: "loop_over_non_iterable.txt",
    line: 1,
}

invalid operation: number is not iterable (in loop_over_non_iterable.txt:1)
------------------------- loop_over_non_iterable.txt --------------------------
   1 > [{% for item in seq %}{% endfor %}]
     i                 ^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    seq: 42,
}
-------------------------------------------------------------------------------
